# capsule

./: .dockerignore  .gitignore  CLAUDE.md  Capsule.bat  Capsule.command  Dockerfile  LICENSE  README.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  pyproject.toml
.claude/: launch.json
app/: __init__.py  animation_freeze.py  audit.py  banner_hide.py  blocklist.py  capture.py  cases.py  classify.py  config.py  cookies.py  db.py  db_retry.py  errors.py  evidence_export.py  extension_tokens.py  frozen_html.py  gallery_dl_runner.py  i18n.py  jobs.py  main.py  network.py  paths.py  pdf_report.py  platforms.py  postprocess.py  profiles.py  sanitize.py  signing.py  updates.py  url_canonical.py  warc_writer.py  ytdlp_runner.py
app/i18n/: ar.json  en.json  es.json  fr.json  ja.json
app/migrations/: 000_init.sql  001_jobs.sql  002_capture_groups.sql  003_rename_sidecar_dir_to_item_dir.sql  (+2 more)
dist-templates/: Capsule-source.ar.command.in  Capsule-source.bat.in  Capsule-source.command.in  Capsule.bat.in  Capsule.command.in
docs/: CODE_REVIEW_2026-05-13.md  COOKIES.md  DESIGN.md  EXTENSION.md  HANDOFF.md  HARDENING.md  UPDATING.md  quickstart.ar.md  quickstart.en.md  quickstart.es.md  quickstart.ja.md  user-guide.ar.md  user-guide.en.md
extension/: README.md  background.js  manifest.json
scripts/: _session_dump.py  build-dist.sh  extract_session_excerpts.py  render_case_study_pdf.py
tests/: conftest.py  test_animation_freeze.py  test_api.py  test_audit.py  test_auto_check.py  test_banner_hide.py  test_blocklist.py  test_capture.py  test_capture_crash_recovery.py  test_capture_io_failures.py  test_capture_redaction.py  test_cases.py  test_classify.py  test_clear.py  test_cookies.py  test_cookies_json.py  test_db.py  test_db_lock_contention.py  test_dedup.py  test_download_options_capture_mode.py  test_errors.py  test_evidence_export.py  test_extension_i18n.py  test_extension_routes.py  test_extension_tokens.py  test_frozen_html.py  test_gallery_dl_runner.py  test_jobs_batch.py  test_jobs_cancel_cleanup.py  test_jobs_control.py  test_jobs_gallery_fallback.py  test_jobs_persistence.py  test_jobs_substatus.py  test_launchers.py  test_main_cookies.py  test_main_updates.py  test_migrations.py  test_network.py  test_pdf_report.py  test_pdf_report_drift.py  (+11 more)
tools/: render_docs.py
(+28 files in other folders)
