[project]
name = "capsule"
version = "0.1.0"
description = "Capsule — capture the web, with proof. A web-evidence capture tool for investigators."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Capsule contributors" }]

dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "python-multipart>=0.0.20",
]

[project.optional-dependencies]
# Capture pipeline (added in Phase 2)
capture = [
  "playwright>=1.49",
]
# Integrity & evidence export (added in Phase 1 / Phase 4)
evidence = [
  "cryptography>=44",
  "weasyprint>=63",
]
# i18n backend (added when error responses or PDF need plurals)
i18n = [
  "babel>=2.16",
]
# Dev / test
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "httpx>=0.28",
  "yt-dlp>=2025.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
