[project]
name = "capsule"
version = "1.0.0"
description = "Capsule — capture the web, with proof. A web-evidence capture tool for investigators."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "bhngyn" }]

dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "python-multipart>=0.0.20",
]

[project.optional-dependencies]
# Capture pipeline (added in Phase 2)
capture = [
  "playwright>=1.49",
  # In-session CDP→WARC writer (CLAUDE.md §"Hardening pass (v0.6)").
  # Pure-Python WARC/1.1 reader/writer used by Webrecorder, pywb, and
  # ArchiveBox — the de-facto reference. Pinned at the major-version
  # boundary so future writer-API changes don't silently change record
  # bytes.
  "warcio>=1.7,<2",
]
# Integrity & evidence export (added in Phase 1 / Phase 4)
evidence = [
  "cryptography>=44",
  "weasyprint>=63",
]
# Dev / test
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "httpx>=0.28",
  "yt-dlp>=2025.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
